<resources>
    <string name="app_name">Greensense</string>
    <string name="app_start">start</string>
    <string name="app_about">about</string>
    <string name="app_exit">exit</string>
    <string name="app_connect">connect</string>
    <string name="app_uri">uri</string>
    <string name="app_back">back</string>
    <string name="app_real_time">live data</string>
    <string name="app_clean">clean</string>
    <string name="app_client_id">client id</string>
    <string name="app_username">username</string>
    <string name="app_password">password</string>
    <string name="app_topic">topic</string>
    <string name="app_message">message</string>
    <string name="app_subscribe">subscribe</string>
    <string name="app_delete">delete</string>
    <string name="app_publish">publish</string>
    <string name="app_disconnect">disconnect</string>
    <string name="app_history">History</string>
    <string name="temperature_value">-</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="humidity_value">-</string>
    <string name="humidity">HUMIDITY</string>
    <string name="luminance_value">-</string>
    <string name="luminance">LUMINANCE</string>
    <string name="pressure_value">-</string>
    <string name="pressure">PRESSURE</string>
    <string name="sensors_title">Sensors</string>
    <string name="add_sensor">Add sensor</string>
    <string name="mac_address">MAC address</string>
    <string name="name">name</string>
    <string name="app_add">add</string>
    <string name="tableHeadingName">name</string>
    <string name="tableHeadingMAC">MAC</string>
</resources>