<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:background="@color/brown_200"
    android:orientation="horizontal">

    <Button
        android:id="@+id/temperature_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/temperature_value"
        android:textColor="@color/brown_400"
        android:textSize="27sp"
        app:backgroundTint="@color/white"
        app:rippleColor="@color/brown_50"
        app:strokeColor="@color/brown_400"
        app:strokeWidth="3dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline6"/>


    <Button
        android:id="@+id/humidity_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/humidity_value"
        android:textColor="@color/brown_400"
        android:textSize="27sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:rippleColor="@color/brown_50"
        app:strokeColor="@color/brown_400"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/hum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/humidity"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />


    <Button
        android:id="@+id/luminance_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/luminance_value"
        android:textColor="@color/brown_400"
        android:textSize="27sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:rippleColor="@color/brown_50"
        app:strokeColor="@color/brown_400"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/lum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/luminance"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />


    <Button
        android:id="@+id/pressure_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pressure_value"
        android:textColor="@color/brown_400"
        android:textSize="27sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:rippleColor="@color/brown_50"
        app:strokeColor="@color/brown_400"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/press"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pressure"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>