<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/brown_200"
    android:orientation="horizontal"
    tools:context=".activities.StartActivity">

    <ImageView
        android:id="@+id/outlinedButtonDisconnect"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_weight="1"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_topic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="15"
        android:hint="@string/app_topic"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:colorPrimary="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="15"
        android:hint="@string/app_message"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:colorPrimary="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlinedButtonSubscribe"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_delete"
                android:textColor="@color/brown_400"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/baseline_delete_24"
                app:iconGravity="textTop"
                app:iconPadding="9sp"
                app:iconSize="35sp"
                app:iconTint="@color/brown_400"
                app:rippleColor="@color/brown_50"
                app:strokeColor="@color/brown_400"
                app:strokeWidth="1.5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlinedButtonPublish"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_publish"
                android:textColor="@color/brown_400"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/baseline_send_to_mobile_24"
                app:iconGravity="textTop"
                app:iconPadding="10sp"
                app:iconSize="35sp"
                app:iconTint="@color/brown_400"
                app:rippleColor="@color/brown_50"
                app:strokeColor="@color/brown_400"
                app:strokeWidth="1.5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlinedButtonRealTime"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_real_time"
                android:textColor="@color/brown_400"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/baseline_repeat_24"
                app:iconGravity="textTop"
                app:iconPadding="11sp"
                app:iconSize="40sp"
                app:iconTint="@color/brown_400"
                app:rippleColor="@color/brown_50"
                app:strokeColor="@color/brown_400"
                app:strokeWidth="1.5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlinedButtonHistory"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_history"
                android:textColor="@color/brown_400"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/baseline_bar_chart_24"
                app:iconGravity="textTop"
                app:iconSize="50sp"
                app:iconTint="@color/brown_400"
                app:rippleColor="@color/brown_50"
                app:strokeColor="@color/brown_400"
                app:strokeWidth="1.5dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>
